# legi-route

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  latest_update.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  update_db.yml
.streamlit/: config.toml
data/processed/: code_route_articles.json
eval/: eval_ragas.py  rag_cache_gemini.json  ragas_results_gemini.json  test_questions.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  Message.tsx  SourceCard.tsx  StatusDot.tsx  ThemeToggle.tsx  Wordmark.tsx
frontend/src/lib/: api.ts  sse.ts
frontend/src/styles/: globals.css
src/: app.py  classifier.py  config.py  generation.py  models.py  providers.py  rag.py  retrieval.py
src/api/: __init__.py  deps.py  main.py  schemas.py  sse.py
src/api/routes/: chat.py  health.py
src/ingestion/: download.py  indexing.py  parser.py
tests/: test_api_chat.py  test_app_logic.py  test_classifier.py  test_generation.py  test_models.py  test_parser.py  test_providers.py  test_retrieval.py
