[tool.poetry]
name = "legi-route"
version = "0.1.0"
description = "RAG system for French Traffic Law (Code de la Route)"
authors = ["Sami Contesenne <sami.contesenne496@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.0"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"
chromadb = "^1.4.1"
tenacity = "^9.1.2"
google-genai = "^1.61.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
