[tool.poetry]
name = "legi-route"
version = "1.0.0"
description = "RAG system for French Traffic Law (Code de la Route)"
authors = ["Sami Contesenne <sami.contesenne496@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.0"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"
tenacity = "^9.1.2"
google-genai = "^1.61.0"
tqdm = "^4.67.0"
streamlit = "^1.54.0"
ragas = "^0.4.3"
langchain-google-genai = "^4.2.1"
pinecone = "^8.1.1"
ollama = "^0.4.7"
groq = "^0.13.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.46.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
httpx = "^0.28.1"
ipykernel = "^7.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
